deploy/kub8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: immersed-flight-planning-service
spec:
  type: NodePort
  selector:
    app: immersed-flight-planning
    version: 2.0.0
  ports:
  - name: http
    protocol: TCP
    port: 50002
    targetPort: 80
