deploy/kub8/ingress.yml
apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: immersed-flight-planning-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /flights(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: immersed-flight-planning-service
            port: 
              number: 80
